# countyrunning

./: .gitignore  .tmp_check_dirty.py  .wrrl_prefs.json  CHANGELOG.md  INSTALL.md  ReadMe.txt  TODO.md  __main__.py  autopilot_raes_mapping.json  autopilot_sheet_diffs.json  pyproject.toml  release_8_0_1.md  release_8_2_0.md  release_8_2_2.md  release_8_2_3.md  release_8_3_0.md  requirements.txt  run_gui.bat  run_gui.py  run_qt.py  test_graph  test_graph.py
AI_Automation/: manual_update_automation_suggestions.md
documents/: Health Check 31st March 26.docx  INSTALL.md  Requirements Specification v3.1a.docx  Technical Design Document.docx  WAA Road Race League.docx  WRRL Design Specification.docx  WRRL_Combined_Release_Notes.md  Wiltshire Road Race League Audit Requirements.docx  audit_decision_log.md  audit_issue_register.md  audit_output_design.md  audit_test_matrix.md  audit_todo_list.md  blank_club_in_inputs.md  call_graph.md  ci_pr_policy.md  cross_references.md  dashboard_ui_changes.md  dependencies.dot  dependencies.md  health_check_report.md  health_check_report.md.new  operational_dependencies.md  process_flow.md  release_6_0_0.md  unused_python_programs.md
league_scorer/: __init__.py  archive_service.py  audit.py  audit_cleanser.py  audit_data_service.py  audit_writer.py  club_loader.py  common_files.py  events_loader.py  exceptions.py  extract_raceroster_results.py  individual_scoring.py  input_layout.py  issue_resolution_service.py  issue_tracking.py  main.py  manual_data_audit.py  manual_edit_service.py  models.py  name_lookup.py  normalisation.py  rules.py  (+15 more)
(+224 files in other folders)
