[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "league-scorer"
version = "8.3.0"
description = "WRRL Admin Suite"
readme = "ReadMe.txt"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
  {name = "Wiltshire Athletics Association"}
]
keywords = ["WRRL", "league", "scoring", "Qt", "admin"]

dependencies = [
  "pandas>=1.5.0,<3.0",
  "openpyxl>=3.0.10,<4.0",
  "xlrd>=2.0.1,<3.0",
  "Pillow>=10.0.0,<11.0",
  "python-docx>=1.1.0,<2.0",
  "docx2pdf>=0.1.8",
  "playwright>=1.50.0,<2.0",
  "PySide6>=6.8.0,<7.0"
]

[project.scripts]
wrrl-admin = "league_scorer.graphical.qt:launch_dashboard"

[tool.setuptools.packages.find]
where = ["."]
include = ["league_scorer*"]
